[package]
name = "audiobuffer"
version = "1.2.1"
edition = "2024"
authors = ["layetri <rosa@expressivelabs.net>"]
description = "A simple Rust library to provide basic audio buffer functionality."
license = "MIT"
repository = "https://github.com/expressivelabs/audiobuffer"
readme = "README.md"
keywords = ["audio", "buffer", "dsp", "signal-processing"]

[dependencies]
abi_stable = { version = "0.11.3", features = ["rust_latest_stable"] }
anyhow = "1.0.97"
log = "0.4.26"
num-traits = "0.2.19"
rubato = {version = "0.16.1", optional = true}
serde = { version = "1.0.228", optional = true }

[features]
default = ["resample"]
resample = ["rubato"]
serde = ["dep:serde"]
